--- a/dataevalservice/src/main/resources/application.properties
+++ b/dataevalservice/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.order_by.default_null_ordering: last
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
