--- a/dataevalservice/src/main/resources/application.properties
+++ b/dataevalservice/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.order_by.default_null_ordering: last
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+tagnos.app.jwtSecret=tagnosSecretKey
+tagnos.app.jwtExpirationMs=1800000
+tagnos.app.jwtRefreshExpirationMs=86000000
