--- a/dataevalservice/src/main/resources/application.properties
+++ b/dataevalservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.security.user.name=admin
-spring.security.user.password=admin
+#spring.security.user.name=admin
+#spring.security.user.password=admin
 spring.datasource.url=jdbc:mysql://localhost:3306/evaldb
 spring.datasource.username=root
 spring.datasource.password=root
