changing to Dev DB

--- a/dataevalservice/src/main/resources/application.properties
+++ b/dataevalservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.security.user.name=admin
 #spring.security.user.password=admin
-spring.datasource.url=jdbc:mysql://localhost:3306/evaldb
+spring.datasource.url=jdbc:mysql://localhost:3306/evaldevdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
