pointing api to same port

--- a/dataevalservice/src/main/resources/application.properties
+++ b/dataevalservice/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 tagnos.app.jwtSecret=tagnosSecretKey
 tagnos.app.jwtExpirationMs=1800000
 tagnos.app.jwtRefreshExpirationMs=86000000
+security.ignored=/**
+logging.level.root=DEBUG
+#spring.application.name=dataeval
+#server.servlet.context-path=/dataeval
